2017-06-30  Vladimir Sedach  <vas@oneofus.la>

	* w3m-form.el (w3m-form-input): If input is readonly, put the input
	value on the kill ring in addition to displaying it in the echo area.
	[emacs-w3m:12724]

2017-06-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-w3m.el, w3m-antenna.el, w3m-bookmark.el, w3m-cookie.el,
	w3m-dtree.el, w3m-ems.el, w3m-favicon.el, w3m-filter.el, w3m-form.el,
	w3m-namazu.el, w3m-perldoc.el, w3m-search.el, w3m-session.el,
	w3m-symbol.el, w3m.el:
	Remove `:size 0' from defcustoms ([emacs-w3m:12709]).

2017-06-26  Vladimir Sedach  <vas@oneofus.la>

	* w3m.el (w3m-url-completion-map): Bind "?" to self-insert-command.
	[emacs-w3m:12721]

2017-06-22  Vladimir Sedach  <vas@oneofus.la>

	* w3m.el (w3m-external-view-temp-directory): New user option.
	(w3m-external-view): Use it control which directory files are saved to
	before being opened with the external viewer.  [emacs-w3m:12708]

2017-06-20  Vladimir Sedach  <vas@oneofus.la>

	* w3m.el (w3m-goto-url-new-session): Handle POST data.
	[emacs-w3m:12704]

2017-06-14  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-cookie.el (w3m-cookie-url, w3m-cookie-domain, w3m-cookie-secure)
	(w3m-cookie-name, w3m-cookie-value, w3m-cookie-path)
	(w3m-cookie-version, w3m-cookie-expires, w3m-cookie-ignore): Add docs.
	(w3m-cookie): Test w3m-use-cookies here insted.
	(w3m-about-cookie): Don't test it.  [emacs-w3m:12699]

2017-06-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-makeinfo): Simplify the tweaking of `message'.

2017-06-12  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-cookie.el (w3m-cookie-clear): Make it a user command.
	(w3m-cookie): Open it as a new session ([emacs-w3m:12685]).

	* w3m.el (w3m-select-buffer-delete-buffer): Don't move point forward
	([emacs-w3m:12684]); clarify doc string.

	* w3m-filter.el (w3m-filter-rt): Bind ephemeral var ([emacs-w3m:12682]).

2017-06-12  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-filter.el (w3m-filter-rt, w3m-filter-slashdot):